--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,6 @@
   <artifactId>localization</artifactId>
   <version>0.91</version>
   <packaging>jar</packaging>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
   <licenses>
     <license>
       <name>BSD 2-Clause License</name>
@@ -29,68 +26,106 @@
       <name>Alexei Khatskevich</name>
     </developer>
   </developers>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+    <java.version>1.8</java.version>
+
+    <dependency.version.junit>4.13</dependency.version.junit>
+    <dependency.version.hamcrest-all>1.3</dependency.version.hamcrest-all>
+    <dependency.version.slf4j-api>1.7.25</dependency.version.slf4j-api>
+    <dependency.version.logback-classic>1.2.3</dependency.version.logback-classic>
+    <dependency.version.commons-text>1.8</dependency.version.commons-text>
+    <dependency.version.system-rules>1.19.0</dependency.version.system-rules>
+
+    <plugin.version.maven.compiler>3.8.1</plugin.version.maven.compiler>
+    <plugin.version.maven.jar>3.2.0</plugin.version.maven.jar>
+    <plugin.version.maven.clean>3.1.0</plugin.version.maven.clean>
+    <plugin.version.maven.resources>3.1.0</plugin.version.maven.resources>
+    <plugin.version.maven.install>3.0.0-M1</plugin.version.maven.install>
+    <plugin.version.maven.surefire>3.0.0-M4</plugin.version.maven.surefire>
+  </properties>
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${plugin.version.maven.compiler}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>${plugin.version.maven.jar}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>${plugin.version.maven.clean}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>${plugin.version.maven.resources}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>${plugin.version.maven.install}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${plugin.version.maven.surefire}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.5.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>2.4</version>
         <configuration>
           <finalName>net-cactusthorn-localization-${project.version}</finalName>
         </configuration>
-      </plugin>   
+      </plugin>
     </plugins>
   </build>
   <dependencies>
-    <!--dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.16.18</version>
-      <scope>provided</scope>
-    </dependency-->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.25</version>
-      <scope>compile</scope>
+      <version>${dependency.version.slf4j-api}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-text</artifactId>
-      <version>1.1</version>
-      <scope>compile</scope>
+      <version>${dependency.version.commons-text}</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.2.3</version>
+      <version>${dependency.version.logback-classic}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-all</artifactId>
-      <version>1.3</version>
+      <version>${dependency.version.junit}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.github.stefanbirkner</groupId>
       <artifactId>system-rules</artifactId>
-      <version>1.16.0</version>
+      <version>${dependency.version.system-rules}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
