--- a/src/test/resources/CombineWith/en-US.properties
+++ b/src/test/resources/CombineWith/en-US.properties
@@ -4,7 +4,7 @@
 # system properties section
 _system.languageTag = en-US
 _system.nplurals = 2
-_system.plural = (count != 1);
+_system.plural = ${count!=1?1:0}
 
 # formats
 _format.combineNumber.type = number
