--- a/src/test/resources/WrongLanguageTag/fr-CA.properties
+++ b/src/test/resources/WrongLanguageTag/fr-CA.properties
@@ -7,5 +7,5 @@
 _system.id = test-app
 _system.languageTag = en-US
 _system.nplurals = 2
-_system.plural = (count != 1);
+_system.plural = ${count!=1?1:0}
 _system.escapeHtml = true
